Bug 165330 - FILEOPEN DOCX Tracked change lost if the paragraph has a frame anchored to it
Summary: FILEOPEN DOCX Tracked change lost if the paragraph has a frame anchored to it
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:25.8.0 target:25.2.2 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2025-02-19 08:06 UTC by Gabor Kelemen (Collabora)
Modified: 2025-02-26 11:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word 2016 (13.31 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-02-19 08:06 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the document in Word 2016 and Writer master (71.16 KB, image/png)
2025-02-19 08:07 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-02-19 08:06:34 UTC
Created attachment 199302 [details]
Example file from Word 2016

Attached example file has two change tracked insertions in two paragraphs. One paragraph also has a frame anchored to it.
When opened in Writer, the tracked change is accepted in the paragraph with the frame.

1. Open attached document
-> only one tracked change is visible

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b4059c4b9ae2230d9c6d722d457dca2216ddd581
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Seems to have started in 6.4 with:

https://git.libreoffice.org/core/+/e8bae67b3dbcc90ace8264b6b1aefaf0ce459aba%5E%21

author	László Németh <nemeth@numbertext.org>	Wed Jul 17 13:37:44 2019 +0200
committer	László Németh <nemeth@numbertext.org>	Thu Jul 18 14:42:07 2019 +0200

tdf#125894: DOCX: import tracked changes in frames
Comment 1 Gabor Kelemen (Collabora) 2025-02-19 08:07:14 UTC
Created attachment 199303 [details]
Screenshot of the document in Word 2016 and Writer master
Comment 2 Commit Notification 2025-02-25 17:09:57 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d09f3f24c38eda633825f4ac214731db06bc9a9a

tdf#165330 writerfilter: fix import of redline in paragraph after frame

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl 2025-02-25 17:28:22 UTC
fixed on master
Comment 4 Commit Notification 2025-02-26 11:08:03 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/bf9eb540d7544799b4c7d66b07719631e654732b

tdf#165330 writerfilter: fix import of redline in paragraph after frame

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-02-26 11:08:07 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/a18e9cc9c043a14e0a7ffd15f40bfe7f5035fdd4

tdf#165330 writerfilter: fix import of redline in paragraph after frame

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.