tdf#165330 writerfilter: fix import of redline in paragraph after frame

The flag m_bIsActualParagraphFramed is reset only in
ExecuteFrameConversion() which is called at the end of the paragraph
that follows the one that is in the frame, so all redlines in that
paragraph were erroneously moved to the frame; reset it when a paragraph
ends, if the next paragraph is also in the frame it can set the flag
again.

(regression from commit e8bae67b3dbcc90ace8264b6b1aefaf0ce459aba)

Change-Id: I75a18d2e7b600737958e984c135ebf6201e6f979
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182181
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit d09f3f24c38eda633825f4ac214731db06bc9a9a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182191
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>